# empyree

./: .gitignore  Makefile  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml
configs/: Makefile  card2vec.yaml  current_model.yaml
data/decoded/: .gitignore  decoded_2025_12_04.csv.dvc
data/final/: .gitignore  cards_tsne.csv.dvc  deck_dataset.csv.dvc  deck_dataset_tsne.csv.dvc
data/processed/: .gitignore  card_corpus.txt.dvc
data/raw/: .gitignore  cards_info.csv.dvc  extract_2025_12_04.csv.dvc  raw_data.csv.dvc
models/: .gitignore  card2vec.model.dvc  card2vec_vectors.txt.dvc
notebooks/: 01_exploration_data_processing.ipynb  02_visualization_corpus.ipynb  03_inference_model.ipynb  04_vizualisation_cards_embedding.ipynb  05_exploration_decks_clustering.ipynb  06_vizualisation_clusters.ipynb  exploration_data_processing.ipynb  visualization_corpus.ipynb
scripts/: build_corpus.py  compute_card_tsne.py  compute_card_umap.py  compute_deck_tsne.py  compute_deck_umap.py  decode_decks.js  run_card_umap.py  run_clustering.py  run_deck_umap.py  train_card2vec.py
src/clustering/: deck_clustering.py  deck_clustering_pipeline.py  deck_embeddings.py  faction_clustering.py  tsne_utils.py  umap_utils.py
src/dashboard/: app.py
src/embeddings/: card2vec.py  deck_embeddings.py  embedding_utils.py
src/preprocessing/: deck_preprocessing.py
tests/: conftest.py  test_card2vec.py  test_clustering.py  test_clustering_pipeline.py  test_deck_embeddings.py  test_deck_faction.py  test_deck_preprocessing.py  test_tsne.py  test_umap.py
(+16 files in other folders)
