[project]
name = "empyree"
version = "0.1.0"
description = ""
authors = [
    {name = "TristanGchlt",email = "tristangchlt@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dvc (>=3.64.1,<4.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "mlflow (>=3.7.0,<4.0.0)",
    "gensim (>=4.4.0,<5.0.0)",
    "plotly (>=6.5.0,<7.0.0)",
    "nbformat (>=5.10.4,<6.0.0)",
    "umap-learn (>=0.5.9.post2,<0.6.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "dash (>=3.3.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"

